--- a/client/main.html
+++ b/client/main.html
@@ -1,55 +1,35 @@
 <head>
-  <title>meteor-react-example</title>
+  <title>matsutter</title>
 </head>
+
 <body>
   <div>{{> loginButtons}}</div>
   <div class="container">
     <header>
-      <h1>meteor-react-example</h1>
+      <h1>matsutter</h1>
     </header>
-{{#if currentUser}}
-  <form>
-          <input type="text" name="text" placeholder="" />
-        <input type="submit" value="つぶやく" />
-      </form>
-    <ul>
-      <h3>つぶやき一覧</h3>
-      {{#each tasks}}
-        {{> task}}
-      {{/each}}
-    </ul>
+    {{#if currentUser}}
+    <form>
+      <input type="text" name="text" placeholder="" />
+      <input type="submit" value="つぶやく" />
+    </form>
+    <h3>つぶやき一覧</h3>
 
-    <div id="demo1">
-        <div class="tab_area clearfix">
-            <ul>
-                <li class="even"><a href="#contents1">タイムライン</a></li>
-                <li class="odd"><a href="#contents2">あなたのつぶやき</a></li>
-                <li class="even"><a href="#contents3">タブ3</a></li>
-            </ul>
-        </div>
-        <div class="content_area">
-            <div class="content_area_inner clearfix">
-                <div id="contents1" class="content_block">
-                    ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。
-                    ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。ここはタブ1をクリックした時に表示されます。
-                </div>
-                <div id="contents2" class="content_block">
-                    ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。
-                    ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。ここはタブ2をクリックした時に表示されます。
-                </div>
-                <div id="contents3" class="content_block">
-                    ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。
-                    ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。ここはタブ3をクリックした時に表示されます。
-                </div>
-            </div>
-        </div>
+    <!--吹き出しはじまり-->
+    <div class="balloon5">
+      {{#each tweets}}
+      <div class="faceicon">
+        <span class="emj">&#x1F604;</span>{{username}}
+      </div>
+      <div class="chatting">
+        <div class="says">{{text}} {{score}}</div>
+      </div>
+      {{/each}}
     </div>
+    <!--吹き出しおわり-->
+
     {{else}}
     <p>ログインしてね</p>
     {{/if}}
   </div>
 </body>
-
-<template name="task">
-  <li>{{username}}：{{text}}  {{createdAt}}</li>
-</template>
