--- a/client/main.html
+++ b/client/main.html
@@ -28,6 +28,7 @@
           <div class="balloon5">
             {{#each tweets}}
             <div class="faceicon">
+              <img src="img/001-happy-2.png"/>
               {{username}}
             </div>
             <div class="chatting">
